# fast-api-chat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
app/: main.py
app/database/: load_data.py
app/models/: __init__.py  database.py
app/routers/: chat.py  claims.py  health.py
data/: insurance_claims.csv
database/: init.sql
scripts/: import_csv_data.py
tests/: conftest.py  test_chat.py  test_claims_api.py  test_database.py  test_health.py
